# CMakeSeries

./: CMakeCache.txt  info.txt
EP001/: CMakeLists.txt  main.cpp
EP001/src/: dog.cpp
EP002/: CMakeLists.txt  main.cpp
EP003/: CMakeLists.txt  main.cpp
EP003/include/: dog.h
EP003/src/: dog.cpp  log.cpp
EP004/: CMakeLists.txt
EP004/docs/: Doxyfile
EP004/src/: main.cpp
EP005/: CMakeLists.txt  main.cpp
EP005/include/: dog.h  log.h
EP005/src/: dog.cpp  log.cpp
EP006/: CMakeLists.txt
EP006/src/maths/: CMakeLists.txt  maths.cmake
EP007/: CMakeLists.txt
EP007/src/: main.cpp
EP007/src/maths/: supermath.cpp
EP008/: INTRS.cmake  odrt.cmake  other.cmake  pokus.cmake  pokus2.cmake  thefunc.cmake
EP008/include/: log.h
EP008/src/maths/: CMakeLists.txt
EP008/src/stats/: CMakeLists.txt
EP009/: CMakeLists.txt
EP009/cmake/: AddFmt.cmake
EP009/src/: main.cpp
EP009/src/maths/: CMakeLists.txt
EP009/src/stats/: stats.cpp
EP009/src/stats/include/: stats.h
